--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generate-vue-component",
+  "name": "vuejs-generate",
   "version": "1.0.0",
   "description": "A CLI for generating component- and module templates in Vue.js",
   "main": "vg.js",
