--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "A CLI for generating component- and module templates in Vue.js",
   "main": "vg.js",
-  "bin": "vg.js",
+  "bin": {
+    "vg": "vg.js"
+  },
   "dependencies": {
     "commander": "^7.0.0"
   },
